--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
    - ST=Squeak-4.4
 
 install:
-   - sudo apt-get install ia32-libs-multiarch
+   - sudo apt-get install -f ia32-libs-multiarch
    - export PROJECT_HOME="$(pwd)"
    - cd $HOME
    - wget -O builderCI.zip https://github.com/dalehenrich/builderCI/zipball/master
