--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
    - ST=Squeak-4.4
 
 install:
+   - sudo apt-get install -f libgphoto2-2
+   - sudo apt-get install -f libsane
    - sudo apt-get install -f ia32-libs-multiarch
    - export PROJECT_HOME="$(pwd)"
    - cd $HOME
