--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: erlang
 
 env:
    - ST=Pharo-1.4
-   - ST=Pharo-2.0
    - ST=Squeak-4.3
    - ST=Squeak-4.4
    - ST=Squeak-4.5
+   - ST=Squeak-4.6
 
 install:
    - export PROJECT_HOME="$(pwd)"
