According to hpi-swa/smalltalkCI#25, I can do this bit of magic to get things working.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ smalltalk:
 
 env:
   global:
-    - BASELINE="Control"
+    - TESTS="ControlTests"
+
+script: $SMALLTALK_CI_HOME/run.sh --mc-config "Control"
